force-app/main/default/objects/Certificate__c/Certificate__c.object-meta.xml
<CustomObject>
    <label>Certificate</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Certificate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>