force-app/main/default/objects/Certificate__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <label>Certificate Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Participation</fullName>
            </value>
            <value>
                <fullName>Winner</fullName>
            </value>
            <value>
                <fullName>Runner-Up</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>