force-app/main/default/objects/Certificate__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>